  of this flag and wasting memory.
  Undetected since July 2015 and now spotted by @TellowKrinkle, this is perhaps
  the oldest bug in Dear ImGui history (albeit for a rarely used feature)! (#9086)
- Scrollbar: fixed a codepath leading to a divide-by-zero (which would not be
  noticeable by user but detected by sanitizers). (#9089) [@judicaelclair]


-----------------------------------------------------------------------
 VERSION 1.92.5 (Released 2025-11-20)
-----------------------------------------------------------------------

Decorated log and release notes: https://github.com/ocornut/imgui/releases/tag/v1.92.5

Breaking Changes:

 - Keys: commented out legacy names which were obsoleted in 1.89.0 (August 2022).
   - ImGuiKey_ModCtrl  --> ImGuiMod_Ctrl
   - ImGuiKey_ModShift --> ImGuiMod_Shift
   - ImGuiKey_ModAlt   --> ImGuiMod_Alt
   - ImGuiKey_ModSuper --> ImGuiMod_Super
 - IO: commented out legacy io.ClearInputCharacters() obsoleted in 1.89.8 (Aug 2023).
   Using io.ClearInputKeys() is enough.
 - BeginChild: commented out legacy names which were obsoleted in 1.90.0 (Nov 2023),
   1.90.9 (July 2024), 1.91.1 (August 2024). (#462, #7687)
   - ImGuiChildFlags_Border                  --> ImGuiChildFlags_Borders
   - ImGuiWindowFlags_NavFlattened           --> ImGuiChildFlags_NavFlattened (moved to ImGuiChildFlags).
   - ImGuiWindowFlags_AlwaysUseWindowPadding --> ImGuiChildFlags_AlwaysUseWindowPadding (moved to ImGuiChildFlags).
   So:
   - BeginChild(name, size, 0, ImGuiWindowFlags_NavFlattened)           --> BeginChild(name, size, ImGuiChildFlags_NavFlattened, 0)
   - BeginChild(name, size, 0, ImGuiWindowFlags_AlwaysUseWindowPadding) --> BeginChild(name, size, ImGuiChildFlags_AlwaysUseWindowPadding, 0)
 - Commented out legacy SetItemAllowOverlap() obsoleted in 1.89.7: this never worked right.
   Use SetNextItemAllowOverlap() _before_ item instead.

Other Changes:

- Windows:
  - Config flag io.ConfigWindowsMoveFromTitleBarOnly is now latched during